--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Deploy on production server
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+         host: ${{ secrets.SERVER_HOST }}
+         username: ${{ secrets.SERVER_USER }}
+         key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
           script_stop: true
           command_timeout: 30m
