--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Deploy on production server
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script_stop: true
           command_timeout: 30m
@@ -40,5 +40,5 @@ jobs:
             echo "[deploy] Connected to $(hostname)"
             cd /opt/linasbot
             git pull --ff-only origin main
-            sudo /opt/linasbot/update.sh
+            sudo /opt/linasbot/deploy.sh
             echo "[deploy] Deployment completed successfully"
