fix(deploy): resolve SSH deploy errors - shebang, EUID, copy logic, Python version
Made-with: Cursor

--- a/linaslaserbot-2.7.22/.github/workflows/deploy.yml
+++ b/linaslaserbot-2.7.22/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
             echo "[deploy] Connected to $(hostname)"
             cd /opt/linasbot
             git pull --ff-only origin main
-            sudo /opt/linasbot/deploy.sh
+            sudo bash /opt/linasbot/deploy.sh
             echo "[deploy] Deployment completed successfully"
