fix(deploy): use git reset --hard to discard local changes before deploy
Made-with: Cursor

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
             set -e
             echo "[deploy] Connected to $(hostname)"
             cd /opt/linasbot
-            git pull --ff-only origin main
+            git fetch origin main
+            git reset --hard origin/main
             sudo bash /opt/linasbot/deploy.sh
             echo "[deploy] Deployment completed successfully"
