Refactor: Knowledge/Style/Price file system, Smart Retrieval, FAQ auto-translate, debug logging
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,10 @@ WHATSAPP_WEBHOOK_VERIFY_TOKEN=your-secure-verify-token
 # ============================================
 # Set to true to disable Firebase saves during testing
 TESTING_MODE=false
+
+# ============================================
+# Smart Retrieval Debug
+# ============================================
+# Set to 1/true to log structured retrieval info per request (intent, files, FAQ match, token estimate)
+# View logs via GET /api/retrieval-debug/logs
+SMART_RETRIEVAL_DEBUG=0
