fix: publish remaining dashboard and service updates
Ship the pending non-live-chat changes across dashboard, handlers, local QA services, and docs so production matches the current working tree and related behavior updates are deployed together.

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,10 @@ TESTING_MODE=false
 # Set to 1/true to log structured retrieval info per request (intent, files, FAQ match, token estimate)
 # View logs via GET /api/retrieval-debug/logs
 SMART_RETRIEVAL_DEBUG=0
+
+# ============================================
+# Training / FAQ Extra Languages
+# ============================================
+# Franco input auto-translates to AR, EN, FR. Add more via comma-separated codes:
+# TRAINING_EXTRA_LANGUAGES=de,es,tr
+TRAINING_EXTRA_LANGUAGES=
