feat: persistent storage – move dashboard data to /opt/linasbot_data
- Add storage/persistent_storage.py with central paths + migration
- Refactor all services/modules to use persistent paths
- Safe migrate_from_legacy() on startup (no overwrite of prod data)
- LINASBOT_DATA_ROOT env (default /opt/linasbot_data)

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,11 @@ MONTYMOBILE_TENANT_ID=your_tenant_id
 MONTYMOBILE_API_ID=your_api_id
 MONTYMOBILE_SOURCE_NUMBER=961XXXXXXXX
 
+# --- Persistent Data (survives deploy/rebuild) ---
+# Production: /opt/linasbot_data (ensure dir exists and app user has rwx)
+# Dev: override with ./linasbot_data or any writable path
+# LINASBOT_DATA_ROOT=/opt/linasbot_data
+
 # --- Optional ---
 # OPENAI_API_KEY=...
 # FIRESTORE_SERVICE_ACCOUNT_KEY_PATH=data/firebase_data.json
