Live Chat: AI vs Bot labels, Like button, handled_by fallback; Activity Flow + all data persist in LINASBOT_DATA_ROOT
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,12 @@ MONTYMOBILE_TENANT_ID=your_tenant_id
 MONTYMOBILE_API_ID=your_api_id
 MONTYMOBILE_SOURCE_NUMBER=961XXXXXXXX
 
-# --- Persistent Data (survives deploy/rebuild) ---
+# --- Persistent Data (IMPORTANT - survives deploy/rebuild) ---
+# All data (Knowledge, Style, Price, FAQ, Smart Messaging, Activity Flow) lives here.
 # Production: /opt/linasbot_data (ensure dir exists and app user has rwx)
-# Dev: override with ./linasbot_data or any writable path
-# LINASBOT_DATA_ROOT=/opt/linasbot_data
+# Dev: override with ./linasbot_data or any writable path outside project
+# If not set: defaults to /opt/linasbot_data
+LINASBOT_DATA_ROOT=/opt/linasbot_data
 
 # --- Optional ---
 # OPENAI_API_KEY=...
